# Crimson-Vector

./: CMakeLists.txt  Commands.txt  Crimson_Vector_Dokumentacio.docx  LICENSE  Makefile  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
src/: camera.c  camera.h  main.c  math3d.c  math3d.h  player.c  player.h  renderer.c  renderer.h  world.c  world.h
